Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.1
-
None
-
8e01088b555271886424dacd14fe95b1a89bb217 (qt/qtbase/5.15)
Description
Some QStringView related API is missing in Qt5, compared to what Qt6 has, related to easier porting from QStringRef to QStringView:
- QStringView::mid / left / right / chop / truncate have undefined behavior or assert when corresponding QStringRef / QString methods return an empty ref / whole string, or similar
- QStringView::split is missing
- QStringView comparison with const char[] is not working, requires wrapping in QLatin1String or similar
- QStringView::toInt(...) et al missing, requiring to convert to QString first
- QStringView::count(...) missing
- QRegularExpression::(global)match(QStringView...) is missing
- QString::operator+=(QStringView) / append / prepend / insert missing
- QString::localeAwareCompare(QStringView), count missing
Attachments
Issue Links
- relates to
-
QTBUG-93677 QStringView::mid() does not work for length < 0
- Closed
- resulted from
-
QTCREATORBUG-24098 Port to Qt 6
- Closed