Loosen the API contract for QStringView::left() and friends

Remove the assertions in QStringView::left() and friends and
turn them into runtime bounds checking instead. This changes
the behavior to be compatible with what we do in Qt 6 (see
change d2833a3ce5af725d66ef9338f2a61b766dd3cb2d) and simplifies
porting from QStringRef to QStringView.

Task-number: QTBUG-86516
Change-Id: I28e3beb4f42c7b9dfc52813cbcfa322a3df5685a
Reviewed-by: Sona Kurazyan <sona.kurazyan@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>